@@ -14,6 +14,8 @@ obj2mesh - create a compiled RADIANCE mesh file from Wavefront .OBJ input
 .B "\-r maxres"
 ][
 .B \-w
+][
+.B \-v
 ]
 [
 .B "input.obj"
@@ -78,6 +80,9 @@ The default is 16384.
 The
 .I \-w
 option suppresses warnings.
+The
+.I \-v
+option prints out final mesh statistics.
 .PP
 Although the mesh file format is binary, it is meant to be portable
 between machines.
